--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ coverage.txt
 # Dependency directories (remove the comment below to include it)
 vendor/
 
+# OS generated files
+.DS_Store
+Thumbs.db
+
 # Go workspace file
 go.work
 
@@ -24,12 +28,12 @@ go.work
 .env.local
 .env.*.local
 
-# IDE specific files
-.idea/
-.vscode/
-*.swp
-*.swo
-*~
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 # MacOS files
 .DS_Store
@@ -37,6 +41,7 @@ go.work
 # Build output
 /bin/
 /build/
+/target/
 /dist/
 
 # Logs
