--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ logs/
 # Temporary files
 /tmp/
 *.tmp
+/ref_to_delete_later/
 
 # Database files
 *.db
@@ -61,3 +62,4 @@ configs/config.local.yaml
 consent-api-server
 main
 consent-mgt-v1.code-workspace
+
