--- a/consent-server/cmd/server/repository/conf/deployment.yaml
+++ b/consent-server/cmd/server/repository/conf/deployment.yaml
@@ -47,7 +47,18 @@ consent:
     created_status: CREATED
     # Status representing a rejected consent
     rejected_status: REJECTED
-  
+  auth_status_mappings:
+    # Authorization state indicating approval
+    approved_state: APPROVED
+    # Authorization state indicating rejection
+    rejected_state: REJECTED
+    # Authorization state indicating creation
+    created_state: CREATED
+    # Authorization state indicating authorization was system-expired due to consent expiry
+    system_expired_state: SYS_EXPIRED
+    # Authorization state indicating authorization was system-revoked due to consent revocation
+    system_revoked_state: SYS_REVOKED
+
 security:
   basic_auth:
     enabled: true
