--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,8 +6,8 @@
             "type": "go",
             "request": "launch",
             "mode": "debug",
-            "program": "${workspaceFolder}/cmd/server",
-            "cwd": "${workspaceFolder}",
+            "program": "${workspaceFolder}/consent-server/cmd/server",
+            "cwd": "${workspaceFolder}/consent-server",
             "console": "integratedTerminal"
         },
         {
